IISCRUM-2835 Fix dropdown clipping issue (#63)

--- a/public/sass/iiris_custom_modal.scss
+++ b/public/sass/iiris_custom_modal.scss
@@ -300,3 +300,8 @@ header .iiris-custom-toolbar {
     }
   }
 }
+
+.maintenance-row-container .gf-form-select-wrapper select.gf-form-input {
+    text-indent: 0;
+    text-overflow: clip;
+}
